main page header created

--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teamwork</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="aessts/stylesheet/index.css">
 </head>
 <body>
-    
+    <header class="header_top">
+        <section>
+            <div>
+                <figure>
+                    <a href=""><img src="aessts/img/logo-logistic.png" alt=""></a>
+                </figure>
+                <section></section>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href=""><i class="bi bi-house"></i></a></li>
+                    <li><a href="">about us</a></li>
+                    <li><a href="">services</a></li>
+                    <li><a href="">FQA's</a></li>
+                    <li><a href="">blog</a></li>
+                    <li><a href="">shop</a></li>
+                    <li><a href="">contact us</a></li>
+                </ul>
+                <section class="header-icons">
+                    <div>
+                        <span><i class="bi bi-facebook"></i></span>
+                        <span><i class="bi bi-linkedin"></i></span>
+                        <span><i class="bi bi-twitter"></i></span>
+                    </div>
+                    <div></div>
+                </section>
+            </nav>
+        </section>
+        <!-- ____header-content_____ -->
+         <div class="header-content">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero hic sapiente ab reiciendis nisi, consequatur aut corporis laboriosam quisquam magni esse commodi accusantium repudiandae officiis repellendus expedita incidunt cum quam.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, animi dolor. Possimus nam voluptas eveniet eius illo cupiditate, sapiente quas omnis non excepturi nemo consequatur culpa architecto quae aspernatur nostrum?
+            </p>
+         </div>
+    </header>
+    <!-- https://xtratheme.com/                                                                                                                            
 </body>
 </html>
