--- a/index.html
+++ b/index.html
@@ -45,6 +45,36 @@
             </p>
          </div>
     </header>
-    <!-- https://xtratheme.com/                                                                                                                            
-</body>
+
+
+    <section class="section_services">
+        <div>
+            <section>
+                <img src="aessts/img/icon-1h.png" alt="">
+                <h4>Digestive System</h4>
+                <a href="">more details</a>
+            </section>
+            <section>
+                <img src="aessts/img/icon-2h.png" alt="">
+                <h4>Urologist Clinic</h4>
+                <a href="">more details</a>
+            </section>
+            <section>
+                <img src="aessts/img/icon-3h.png" alt="">
+                <h4>Cardiologist</h4>
+                <a href="">more details</a>
+            </section>
+            <section>
+                <img src="aessts/img/icon-4h.png" alt="">
+                <h4>Endocrinologist</h4>
+                <a href="">more details</a>
+            </section>
+            <section>
+                <img src="aessts/img/icon-5h.png" alt="">
+                <h4>Dentistry</h4>
+                <a href="">more details</a>
+            </section>
+        </div>
+        <div></div>
+    </section>
 </html>
