create extra-contact site

--- a/Pages/about us/about-us.html
+++ b/Pages/about us/about-us.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../aessts/stylesheet/index.css">
 </head>
 <body>
+    <!-- _____________ START OF HEADER _____________4 -->
     <header>
         <section class="header_top">
             <div class="contact">
@@ -73,5 +74,25 @@
             </div>
         </section>
     </header>
+    <!-- ــــــــ-  END OF HEADER _-__________ -->
+    <!-- _________ START OF .EXTRA-CONTACT ___________- -->
+    <section class="extra-contact">
+        <section class="about-medical">
+            <h2>About our <a href="">Xtra Medical</a></h2>
+            <p>With over 15 years of experience</p>
+        </section>
+        <!-- __________ END OF .ABOUT-MEDICAL-CONTENT __________ -->
+        <figure>
+            <img src="../../aessts/IMG/p6.jpg" alt="p6">
+            <figcaption>
+                <div>
+                    <span><i class="bi bi-play-fill"></i></span>
+                    <a href="">about medical whach the video</a>
+                </div>
+            </figcaption>
+        </figure>
+        <!-- __________ END OF FIGURE _________ -->
+    </section>
+    <!-- ____________ END OF .EXTRA-CONTACT ___________- -->
 </body>
 </html>
