create _get-meds-from-us site

--- a/Pages/about us/about-us.html
+++ b/Pages/about us/about-us.html
@@ -94,5 +94,12 @@
         <!-- __________ END OF FIGURE _________ -->
     </section>
     <!-- ____________ END OF .EXTRA-CONTACT ___________- -->
+    <!-- ____________ START OF .GET-MEDS-FROM-US ___________ -->
+    <section class="get-meds-from-us">
+        <section class="years-of-exprience">
+            <div></div>
+        </section>
+    </section>
+    <!-- ___________- END OF .GET-MEDS-FROM-US ___________ -->
 </body>
 </html>
