Normalize line endings

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="aessts/stylesheet/index.css">
 </head>
 <body>
+    <header class="header_top">
+        <section class="top-menu">
+            <figure>
+                <img src="aessts/img/logo-logistic.png" alt="">
+            </figure>
+        </section>
+        <div class="navbar"></div>
+
+    </header>
     
 </body>
 </html>
